--- a/css/index.css
+++ b/css/index.css
@@ -76,4 +76,44 @@ html,body {
 .recommend .item_box {
 	padding: 0vw 3.33vw 6vw;
 }
+.high {
+	height: 30vw;
+}
+
+.footer {
+	width: 100%;
+	background-color: white;
+	position: fixed;
+	bottom: 0;
+	border-top: 0.13vw solid #dcdcdc;
+}
+
+.footer_list {
+	display: flex;
+}
+
+.footer_list>li {
+	width: 25%;
+	/* height: 23vw; */
+	display: flex;
+	justify-content: center;
+	padding-top: 2.53vw;
+}
+
+.footer_list a {
+	display: flex;
+	flex-direction: column;
+	align-items: center;	
+}
+
+.footer_list img {
+	width: 5.47vw;
+	height: 5.47vw;
+	margin-bottom: 0.8vw;
+}
+
+.footer_list span {
+	font-size: 3.47vw;
+	color: #5f5f5f;
+}
 
