--- a/css/user.css
+++ b/css/user.css
@@ -202,8 +202,8 @@ html,body {
 }
 
 .footer_list>li {
-	width: 20%;
-	height: 23vw;
+	width: 25%;
+	/* height: 23vw; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
