--- a/css/user.css
+++ b/css/user.css
@@ -157,7 +157,7 @@ html,body {
 
 .serve li {
 	width: 25%;
-	margin-bottom: 4vw;
+	margin-bottom: 10vw;
 }
 
 .serve li a {
@@ -173,6 +173,9 @@ html,body {
 .serve_list01 img {
 	width: 4.4vw;
 	height: 4.4vw;
+}
+.serve_list01 li {
+	margin-top:50px;
 }
 
 .serve_list02 img {
@@ -226,3 +229,6 @@ html,body {
 	font-size: 3.47vw;
 	color: #5f5f5f;
 }
+/* .serve_list02{
+	margin-top: 50px;
+} */
